--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/Handyman.jpg" alt="">
+          <img class="img-fluid" src="img/handyman.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
